Fix z-index issue with modal and redirect advanced options
If you had advanced options open a text field would appear over a modal

--- a/client/component/modal/style.scss
+++ b/client/component/modal/style.scss
@@ -30,7 +30,7 @@ body.redirection-modal_shown {
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index: 10000;
+	z-index: 20000;
 
 	align-items: center;
 	flex-grow: 1;
